$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-22 (opened July 15, 2009)
	* mantel.correlog, print.mantel.correlog & plot.mantel.correlog: 
	new functions to construct multivariate mantel correlograms --- 
	use in ecology: to describe the spatial structure of species
	assemblages. See Legendre and Legendre, Numerical ecology; 1998,
	section 13.13.1.5. Written by Pierre Legendre.

Version 1.16-21 (opened July 4, 2009)

	* capscale: has now 'fitted' method (and hence, 'residuals'), and
	'predict' works with 'type = "response"'. These give
	dissimilarities that produce same ordination as original data, or
	their low-rank approximations. Function 'fitted' has 'model =
	"Imaginary"' that returns correction distances of complex
	eigenvectors with negative eigenvalues.  The dissimilarities are
	not additive, and the "Imaginary" component is not used in
	estimating the unconstrained component.

	* capscale: really works now either with argument 'dfun' or
	'metaMDSdist' (but not with both!).

	* wcmdscale: returns negative eigevalues scaled by
	sqrt(abs(eigenvalues)) if 'k' is not given or 'k' would include
	any negative eigenvalue.
	
Version 1.16-20 (closed July 4, 2009)

	* new version opened concurrently with the release of vegan 1.15-3
	on June 17, 2009.

	* orditorp: works now when axes are reversed like xlim = c(1,-1).

	* rrarefy: a new function to generate randomly rarefied
	communities.

	* betadisper: fix bug in removal of (effectively) zero Eigenvalues.

	* summary.cca: takes care that all scores have rownames --
	head/tail fail without names. No  ugly printing for constrained
	eigenvalues when these do not exist in unconstrained models.

	* biplot.rda: honour args to scores ('scaling', 'const').

	* points/text for cca: accept 'const' argument for rda scores.

	* ordilabel: no superfluous warnigns when args ('scaling',
	'const') are given to scores.

	* ordiplot3d: honour args to scores ('scaling', 'const') and
	without warnings.
